Scale down images on mobile to avoid overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,3 +149,8 @@ div.blog-social-icons > div img {
 div.blog-social-icons > div a:hover {
 	text-decoration: none;
 }
+
+article.post img {
+	max-width: 100%;
+	height: auto;
+}
